<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ivalentin.gmmaster.MainActivity" >

    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_text" />

        <EditText
            android:id="@+id/et_form_uname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/form_hint"
            android:inputType="textCapWords|textPersonName" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_form_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/form_phone"
            android:inputType="phone" />

        <Button
            android:id="@+id/bt_form_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/form_send" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_noadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noadmin"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_red"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_location"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/location_text"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/location_nobody"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            android:id="@+id/bt_button_report"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:lines="4"
            android:minLines="4"
            android:text="@string/button_location" />

        <Button
            android:id="@+id/bt_button_notification"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="100dp"
            android:lines="4"
            android:minLines="4"
            android:text="@string/button_notification" />

    </LinearLayout>

</LinearLayout>
